# Step2Tracker

./: .env.production  .gitignore  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  spec.md  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  tsconfig.tests.json  vite.config.ts
.github/workflows/: release.yml
docs/: autotracker-v2-architecture.md  autotracker-v2-entitlement-and-sync.md  autotracker-v2-state-machine.md  distribution.md  post-release-smoke-checklist.md  timefolio-integration-plan.md  timefolio-live-file-inventory.md
public/: manifest.webmanifest  sw.js
scripts/: clean-tauri-bundle.mjs  smoke-release.mjs  verify-release-env.mjs  verify-tauri-bundle-version.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: accounts.rs  main.rs  persistence.rs  tf_autotracker.rs  tf_autotracker_v2_native.rs  tf_persistence.rs  updater.rs
src/components/: consistency-heatmap.tsx  focus-orbit.tsx  lazy-plot.tsx  mini-calendar.tsx  modal-shell.tsx  momentum-ribbon.tsx  notebook-editor-adapter.tsx  notebook-image-node-view.tsx  notebook-pdf-viewer.tsx  rich-text-editor.tsx  rich-text-utils.ts  study-task-card.tsx  study-task-editor.tsx  task-launch-button.tsx  timefolio-heatmap.tsx  tiptap-editor.tsx  tiptap-highlight.ts  ui.tsx
src/data/: bootstrap-schedule.json  demo-data.ts
src/features/: analytics-view.tsx  app-navigation.ts  auth-gate.tsx  dashboard-view.tsx  error-log-view.tsx  (+13 more)
(+84 files in other folders)
