[package]
name = "step2_ck_command_center"
version = "0.0.0"
description = "TimeFolio Study Tracker desktop shell"
authors = ["Paul"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }
base64 = "0.22"
tauri-plugin-notification = "2.3.3"

[dev-dependencies]
tempfile = "3"
